# city-activitas-backend

./: .bandit  Dockerfile  LICENSE  docker-compose.yml  mkdocs.yml  pyproject.toml
db/: clone_test_env.sql  custom_schemas.sql  dbdiagram.dbml  insert_activated_asset.sql  insert_asset_cases.sql  insert_building_asset.sql  insert_info.sql  insert_land_asset.sql  table_schemas.sql  table_view.sql
docs/: README.md  contributing.md
server/: main.py
server/dependencies/: auth.py
server/routers/: activated_assets.py  active_cases.py  assets.py  auth.py  common.py  idle_assets.py  system.py
server/utils/: error_handlers.py
tasks/: build.py  common.py  test.py
tests/: conftest.py  test_case.md  test_server.py
